tests/negative/optimizer/mod_zero.orng
// mod_zero.orng:6:14: error: divide by 0
//     @mod(5, 0)
//             ^
// 
fn main() -> Int {
    @mod(5, 0)
}